--- a/packages/aggregator-pattern/package.json
+++ b/packages/aggregator-pattern/package.json
@@ -7,12 +7,14 @@
   "devDependencies": {
     "@types/express": "^4.17.11",
     "@types/node": "^15.0.1",
+    "@types/uuid": "^8.3.0",
     "ts-node-dev": "^1.1.6",
     "typescript": "^4.2.4"
   },
   "dependencies": {
     "axios": "^0.21.1",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "ts-node": "^9.1.1"
   },
   "scripts": {
     "start:aggregator": "ts-node-dev src/aggregatorService/main.ts",
